--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -12,32 +12,21 @@
 body { 
 	font: 13px Helvetica, Arial; 
 }
-
-form { 
-	background: #000; 
-	padding: 3px; 
-	position: fixed; 
-	bottom: 0; 
-	width: 100%; 
+.view-container {
+	position: relative;
+	height: calc(100vh - 52px);
 }
-form input { 
-	border: 0; 
-	padding: 10px; 
-	width: 90%; 
-	margin-right: .5%; 
-}
-form button { 
-	width: 9%; 
-	background: rgb(130, 224, 255); 
-	border: none; 
-	padding: 10px; 
+.chat-container {
+	position: absolute;
+	bottom: 0;
+	margin: 3px 0;
 }
 #messages { 
 	list-style-type: none; 
 	margin: 0; 
 	padding: 10px 0;
 	position: absolute;
-	top: 50px;
+	top: 0px;
 	bottom: 40px;
 	overflow-x: hidden;
 	overflow-y: scroll;
