--- a/public/main.css
+++ b/public/main.css
@@ -6839,31 +6839,21 @@ button.close {
 body {
   font: 13px Helvetica, Arial; }
 
-form {
-  background: #000;
-  padding: 3px;
-  position: fixed;
+.view-container {
+  position: relative;
+  height: calc(100vh - 52px); }
+
+.chat-container {
+  position: absolute;
   bottom: 0;
-  width: 100%; }
-
-form input {
-  border: 0;
-  padding: 10px;
-  width: 90%;
-  margin-right: .5%; }
-
-form button {
-  width: 9%;
-  background: #82e0ff;
-  border: none;
-  padding: 10px; }
+  margin: 3px 0; }
 
 #messages {
   list-style-type: none;
   margin: 0;
   padding: 10px 0;
   position: absolute;
-  top: 50px;
+  top: 0px;
   bottom: 40px;
   overflow-x: hidden;
   overflow-y: scroll; }
